--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,4 +1,7 @@
-all: latest
+.PHONY: all
 
-latest:
+all: build.done
+
+build.done: Dockerfile
 	docker build -t bhaskarvk/rgeodataviz .
+	touch build.done
