--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,37 +10,53 @@ Encoding: UTF-8
 LazyData: true
 Depends:
     R (>= 3.1.0)
-Imports: xaringan,
-  rmarkdown,
-  knitr
-Suggests: 
-    tidyverse,
-    rgdal,
-    rgeos,
-    sp,
-    sf,
-    raster,
-    rasterVis,
-    ggplot2,
-    broom,
-    ggmap,
-    ggalt,
-    viridis,
-    animation,
-    raster,
-    rasterViz,
-    leaflet,
-    leaflet.extras,
-    leaflet.esri,
-    mapview,
-    mapedit,
-    tmap,
-    rnaturalearth,
-    albersusa,
-    maps,
-    maptools,
-    gdistance,
-    geosphere
+Suggests: albersusa,
+			animation,
+			broom,
+			cartography,
+			colormap,
+			crosstalk,
+			dplyr,
+			DT,
+			geojsonio,
+			ggalt,
+			gganimate,
+			ggiraph,
+			ggmap,
+			ggplot2,
+			ggspatial,
+			ggthemes,
+			highcharter,
+			hrbrthemes,
+			htmltools,
+			knitr,
+			leaflet,
+			leaflet.extras,
+			magrittr,
+			maps,
+			memoise,
+			methods,
+			plotly,
+			purrr,
+			raster,
+			rasterVis,
+			rbokeh,
+			readr,
+			rgdal,
+			rgeos,
+			rmapshaper,
+			rmarkdown,
+			rnaturalearth,
+			scales,
+			sf,
+			shiny,
+			sp,
+			stringr,
+			tilegramsR,
+			tmap,
+			viridis,
+			widgetframe,
+			xaringan
 Remotes: tidyverse/ggplot2,
   - edzer/sfr,
   - hrbrmstr/ggalt,
@@ -56,6 +72,7 @@ Remotes: tidyverse/ggplot2,
   - r-spatial/mapedit,
   - dkahle/ggmap,
   - riatelab/cartography
+  - ropensci/plotly
 VignetteBuilder: knitr
 URL: https://github.com/bhaskarvk/user2017.geodataviz
 BugReports: https://github.com/bhaskarvk/user2017.geodataviz/issues
